--- a/css/index.css
+++ b/css/index.css
@@ -4,308 +4,28 @@
     line-height: 1;
     vertical-align: middle
 }
+a{
+    color: #000;
+    text-decoration: none;
+}
 html,body{
     overflow-x: hidden;
 }
 .wrap{
     max-width: 7.5rem;
     margin: 0 auto;
-}
-.banner{
     font-size: 0;
 }
-.banner img{
-    width: 100%; 
+.wrap img{
+    width: 100%;
+    vertical-align: middle;
     margin-top: -1px;
 }
-.stus .con1{
-    width: 100%;
-    background: url(../images/bj1.jpg) no-repeat;
-    background-size: contain;
-    padding-bottom: 0.75rem;
+.ba{
+    padding-bottom: 2.38rem;
 }
-.title{
-    text-align: center;
-    font-size: 0;
-    
-}
-.stus .title{
-    padding-top: 0.68rem;
-}
-.con1 .title img{
-    width: 3.22rem;
-}
-.clearfix::after{
-    content: "";
-    clear: both;
-    display: block;
-}
-.fl{
-    float: left;
-}
-.fr{
-    float: right;
-}
-.content{
-    padding-left: 0.57rem;
-    padding-right: 0.32rem;
-}
-.con1 .content{
-    margin-top: 0.52rem;
-}
-.sj{
-    width:2.2rem;
-}
-.textConBox{
-    margin-top: 0.13rem;
-    width: 3.98rem;
-}
-.text{
-    font-size: 0.25rem;
-    color: #333333;
-}
-.textCon p{
-    font-size: 0.2rem;
-    color: #313131;
-    line-height: 0.3rem;
-    margin-top: 0.19rem;
-}
-.qianw{
-    display: block;
-    margin-top: 0.2rem;
-    font-size: 0;
-}
-.qianw img{
-    width: 1.33rem;
-}
-.xian{
-    width: 2.26rem;
-}
-.xinq{
-    width: 2.06rem;
-}
-.con3{
-    background: url(../images/bj2.jpg) no-repeat;
-    background-size: contain;
-    padding-top: 0.46rem;
-    margin-top: 0.2rem;
-    padding-bottom: 0.2rem;
-}
-.t2{
-    width: 3.23rem;
-}
-.stus2{
-    background: #e2edff url(../images/bl.jpg) no-repeat;
-    background-size: contain;
-    padding-top: 0.92rem;
-    font-size: 0;
-    margin-top: 0.6rem;
-}
-.stus2 .title{
-    padding: 0;
-}
-.imgTxtBox{
-    margin-top: 0.45rem;
-    padding-bottom: 0.92rem;
-}
-.itBox{
-    width: 6.53rem;
-    margin: 0 auto ;
-    margin-bottom: 0.3rem;
-}
-.itBox img{
-    width: 3.25rem;
-}
-.bgC{
-    background: #c0daff;
-    width: 3.04rem;
-    height: 2.42rem;
-    padding-right: 0.24rem;
-    position: relative;
-}
-.textTitle{
-    font-size: 0.25rem;
-    color: #333;
-    margin-bottom: 0.17rem;
-    padding-top: 0.22rem;
-    padding-left: 0.15rem;
-}
-
-.textStuCon p{
-    font-size: 0.2rem;
-    color: #313131;
-    line-height: 0.3rem;
-    padding-left: 0.15rem;
-}
-.bgC .detail{
-    position: absolute;
-    
-    width: 1.24rem;
-    background: #ff6e97;
-    color: #fff;
-    font-size: 0.19rem;
-    text-align: center;
-    padding: 0.15rem 0;
-}
-.bgcolor1 .detail{
+.piao{
+    position: fixed;
     bottom: 0;
-    right: 0;
-}
-.bgcolor2{
-    background:#6caaff;
-}
-.bgcolor2 .textTitle,.bgcolor2 .textStuCon p{
-    color: #fff;
-}
-.bgcolor2 .detail{
     left: 0;
-    bottom: 0;
-}
-.itBox:last-child{
-    margin-bottom: 0;
-}
-.stus3{
-    padding-top: 0.68rem;
-}
-.t3{
-    width: 3.2rem;
-}
-.stus3Box{
-    margin-top: 0.42rem;
-}
-.stus3Con1{
-    padding: 0 0.5rem;
-    margin-bottom: 0.6rem;
-}
-.stus3Con1 img{
-    width: 3.15rem;
-}
-.stus3Con{
-    width: 3.13rem;
-    position: relative;
-    margin-top: 0.4rem;
-    
-}
-.stus3{
-    background: url(../images/bg1.jpg) center 3.4rem no-repeat,url(../images/bg2.jpg) bottom no-repeat;
-    background-size: 100%;
-}
-.til{
-    width:2.27rem;
-    height: 0.72rem;
-    background: url(../images/bjtitle.png) no-repeat;
-    background-size: contain;
-    color: #323232;
-    font-size: 0.26rem;
-    padding-left: 0.62rem;
-    line-height: 0.72rem;
-    position: relative;
-    left: -0.68rem;
-}
-.stus3Con p{
-    font-size: 0.2rem;
-    line-height: 0.3rem;
-    margin-top: 0.2rem;
-}
-.stus3Con img{
-    width: 1.33rem;
-}
-.quanqiu{
-    width: 100%;
-    height: 4.22rem;
-    background:url(../images/bg3.jpg);
-    background-size: contain;
-    margin-bottom: 0.4rem;
-}
-.chaotwo{
-    width: 100%;
-    height: 5.04rem;
-    background: url(../images/bj4.jpg);
-    background-size: contain;
-}
-.t4{
-    width: 4.88rem;
-}
-.xueyuan{
-    padding-top: 0.6rem;
-}
-.xuexCon{
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-.xueBox{
-    padding: 0 0.53rem;
-}
-.xueBox img{
-    width: 3.6rem;
-}
-.douCon img{
-    width: 0.37rem;
-    margin-top: 0.25rem;
-}
-.douCon{
-    width: 2.65rem;
-    font-size: 0;
-}
-.douConTitleB{
-    font-size: 0.24rem;
-    margin: 0.13rem 0; 
-}
-.douCon p{
-    font-size: 0.16rem;
-    line-height: 0.3rem;
-    color: #313131;
-}
-.xueyuan{
-    background: url(../images/xbj1.jpg) center 1rem no-repeat, url(../images/xbj2.jpg) bottom no-repeat;
-    background-size: contain;
-    padding-bottom: 0.01rem;
-    margin-bottom: 0.6rem;
-}
-.huwai{
-    background:#e2edff url(../images/bl.jpg) no-repeat;
-    background-size: contain;
-    padding-top: 0.94rem;
-}
-.t5{
-    width: 4.23rem;
-}
-.conH{
-    text-align: center;
-    margin-top:0.54rem;
-}
-.conH img{
-    width: 6.5rem;
-}
-.mybe{
-    margin-top: 0.9rem;
-    
-}
-.mybe .title{
-    font-size: 0.28rem;
-    margin-bottom: 0.33rem;
-}
-.iconBox img{
-    width: 0.5rem;
-}
-.iconBox{
-    display: flex;
-    justify-content: space-between;
-    padding: 0 0.54rem;
-    margin-bottom: 0.7rem;
-}
-.iconBox div{
-    text-align: center;
-    width: 25%;
-}
-.iconBox p {
-    font-size: 0.18rem;
-    color: #5e5858;
-}
-.ling{
-    text-align: center;
-    padding-bottom: 0.54rem;
-}
-.ling img{
-    width: 3.98rem;
 }
