--- a/css/index.css
+++ b/css/index.css
@@ -28,4 +28,22 @@ html,body{
     position: fixed;
     bottom: 0;
     left: 0;
+    background: url(../images/piao.png) no-repeat;
+    background-size: 100%;
+    width: 100%;height: 1.68rem
+}
+.tell{
+    width: 2.42rem;
+    height: 0.62rem;
+    position: absolute;
+    bottom: 0.3rem;left: 2rem;
+    border-radius: 1rem;
+    border: 0;
+    padding-left: 0.2rem;
+}
+.leftTall{
+    position: absolute;left: 0;
+    bottom: 0;
+    width: 2rem;
+    height: 100%;
 }
