--- a/css/index.css
+++ b/css/index.css
@@ -48,3 +48,12 @@ html,body{
     width: 2rem;
     height: 100%;
 }
+a{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.one{
+    background: url(../images/logo.jpg) url(../images/title1.jpg) url(../images/head.jpg);
+    background-size: contain;
+}
