--- a/css/index.css
+++ b/css/index.css
@@ -48,7 +48,7 @@ html,body{
     width: 2rem;
     height: 100%;
 }
-a{
+/* a{
     display: block;
     width: 100%;
     height: 100%;
@@ -56,4 +56,4 @@ a{
 .one{
     background: url(../images/logo.jpg) url(../images/title1.jpg) url(../images/head.jpg);
     background-size: contain;
-}
+} */
